<resources>
    <string name="app_name">건강검진 예약 어플</string>
    <string name="a">검진기관으로부터 귀하의 개인정보를 보건소와 공단에 제공하는 아래의 내용에 대해 설명을 충분히 들었으며 고지된 관련사항을 제공하는 것에 동의합니다.
 \n ① 정보 활용기관: 보건소, 국립암센터, 질병관리본부, 공단
 \n ② 개인정보제공 목적: 검진결과 자가관리 및 예방조치가 필요한 자, 질환(의심)자에 대한 건강관리서비스 지원, 암검진 결과에 따른 사후관리, 폐결핵 관련 사후관리
 \n ③ 제공하는 개인정보 항목
  \n - 공단 → 보건소
  \n  ㆍ성명, 주민등록번호, 주소, 전화번호, 이메일 등 개인식별정보와 건강검진결과 및 문진자료
  \n - 보건소 → 공단: 성명, 주민등록번호, 보건소에서 귀하에게 제공한 건강관리서비스 내역
  \n - 공단 → 국립암센터 및 보건소
  \n  ㆍ성명, 주민등록번호, 주소, 전화번호, 이메일 등 개인식별정보와 암검진 결과 및 문진자료
  \n - 공단 → 질병관리본부 및 보건소
  \n  ㆍ성명, 주민등록번호, 주소, 전화번호, 이메일 등 개인식별정보와 흉부방사선 촬영결과 및 폐결핵 관련 문진자료
 \n ④ 개인정보 보유 및 이용기간: 2년
 \n ⑤ 귀하는 개인정보를 제3자에게 제공하는 것에 대한 동의를 거부할 권리가 있으며, 이 경우에는 보건소의 건강관리서비스 제공 대상에서 제외될 수 있습니다.
    </string>

    <string name="b">건강검진 정보, 보건소의 건강관리서비스 내역은 민감정보로 검진기관으로부터 개인정보 처리에 관하여 고지 받았으며 이를 충분히 이해하고 동의합니다</string>
    <string name="c">주민등록번호는 고유식별정보로 검진기관으로부터 개인정보 처리에 관하여 고지 받았으며 이를 충분히 이해하고 동의합니다. </string>


    <string name="aa">지역 세대주, 직장 가입자 및 40세 이상 세대원과 피부양자(의료급여수급권자 만 19세~ 64세 세대주 및 만 40세 ~ 46세 세대원)\n\n
        매 2년마다 1회, 비사무직은 매년 실시하며, 만 40세와 66세는 생애전환기 건강진단 대상자로 일반 검진 대상에서는 제외된다. 암 검진은 총 5가지로,
        검사 종류에 따라 대상자 및 검사 주기에 차이가 있다. </string>
    <string name="bb">보건복지부는 "비만과 고혈압의 경우 유병연령이 낮아지고 있지만 20~30년대 고용 기간이 점차 늦춰져 청년세대가 일반 건강검진에 포함될 것"이라고 밝혔다.\n\n
        올해부터 20~30대 주부, 대학생, 취업준비생 등이 무료 건강검진을 받게 되며 만 50세 이상이면 누구나 무료로 전국 대장암 검진을 받을 수 있다.
        외국인도 보험가입자라면 한국인처럼 무료로 건강검진을 받을 수 있다. </string>
    <string name="cc">1. 진찰, 상담, 신장, 체중, 허리둘레, 체질량지수, 시력, 철력, 혈압측정 \n
        2. 총콜레스테롤, HDL콜레스테롤, LDL콜레스테롤, 트리글리세라이드 \n
        3. AST(SGOT), ALT(SGPT), 감마지피티 \n
        4. 공복혈당 \n
        5. 요단백, 혈청크레아니틴, 혈색소, 신사구체여과율(e-GFR) \n
        6. 흉부방사선촬영 \n
        7. 구강검진 \n
        8. KDSQ-P 선별검사(치매선별검사: 만 66, 70, 74세만 해당) \n</string>
    <string name="dd">1. 공통 - 건강검진 진찰, 상담 \n
        2. 고혈압 - 1차 검진 결과 고혈압 질환의심자: 혈압측정 \n
        3. 당뇨병 - 1차 검진 결과 당뇨병 질환의심자: 공복혈당 측정 \n
        4. 인지기능장애 - 1차검진 수검자 중 인지기능장애 고위험군: KDSQ-C 선별검사 및 상담(치매선별검사: 만 66세, 70, 74세만 해당) \n
        5. KDSQ-C 선별검사(치매선별검사: 만 66, 70, 74세만 해당) \n
        ※ 만 66세 치매선별검사는 생애전환기 건강진단 2차 검진에 해당</string>

</resources>